Quorum3/Library/Tests/TypeCheckerGenerated/Fail/ImpAssignIntObjObject.quorum
class Main
    action Main
        Object v
    Integer t
        v:SetValue(5)
        Test(v)
    end

    action Test(Integer var)
    end
end
